--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.9.0",
 		"@radix-ui/react-dialog": "^1.1.1",
+		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@tanstack/react-router": "^1.43.12",
 		"class-variance-authority": "^0.7.0",
@@ -18,9 +20,11 @@
 		"lucide-react": "^0.400.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.52.1",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.3.0",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
