--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@formkit/auto-animate": "^0.8.2",
 		"@hookform/resolvers": "^3.9.0",
 		"@radix-ui/react-avatar": "^1.1.0",
 		"@radix-ui/react-dialog": "^1.1.1",
@@ -22,6 +23,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.52.1",
+		"react-use-websocket": "^4.8.1",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
