--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,15 +15,17 @@
 		"@radix-ui/react-avatar": "^1.1.0",
 		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-popover": "^1.1.2",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@tanstack/react-router": "^1.52.3",
-		"@uidotdev/usehooks": "^2.4.1",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
 		"lucide-react": "^0.400.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.53.0",
+		"react-use": "^17.5.1",
 		"react-use-websocket": "^4.8.1",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.5.2",
