--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"format": "biome format --write",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"prebuild": "tsr generate"
 	},
 	"dependencies": {
 		"@formkit/auto-animate": "^0.8.2",
@@ -34,6 +35,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
+		"@tanstack/router-cli": "^1.77.7",
 		"@tanstack/router-devtools": "^1.52.3",
 		"@tanstack/router-plugin": "^1.52.0",
 		"@types/node": "^20.16.3",
