--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "frontend",
 	"private": true,
-	"version": "0.0.0",
+	"version": "0.1",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
@@ -21,11 +21,13 @@
 		"@tanstack/react-router": "^1.52.3",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"cobe": "^0.6.3",
 		"date-fns": "^4.1.0",
 		"lucide-react": "^0.400.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-hook-form": "^7.53.0",
+		"react-spring": "^9.7.4",
 		"react-use": "^17.5.1",
 		"react-use-websocket": "^4.8.1",
 		"sonner": "^1.5.0",
